--- a/Projet_Nasdaq.ipynb
+++ b/Projet_Nasdaq.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOc27B46LnKfRwJdLAcp2zx",
+      "authorship_tag": "ABX9TyMNhF+zEc8a49el5U1vbxtj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "D5qvt7yO4uIm"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "D5qvt7yO4uIm",
+        "outputId": "966d3144-bb41-414d-ce54-9d4e89679c9c"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello world\n"
+          ]
+        }
+      ],
+      "source": [
+        "print('hello world')"
+      ]
     }
   ]
 }
